--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
 <head>
-	<title>Boto | Photography HTML Template</title>
+	<title>Semi-basic_2 - Tacher Evelin</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Boto Photo Studio HTML Template">
 	<meta name="keywords" content="photo, html">
@@ -23,7 +23,7 @@
 	<![endif]-->
 
 </head>
-<body>
+<body style="background-color: rgb(216, 216, 216);">
 	<!-- Page Preloder -->
 	<div id="preloder">
 		<div class="loader"></div>
@@ -55,99 +55,162 @@
 			</div>
 			<nav class="main__menu">
 				<ul class="nav__menu">
+					<!-- <li><a href="./index.html">Home</a></li>
+					<li><a href="./about.html">About</a></li> -->
 					<li><a href="./index.html" class="menu--active">Home</a></li>
-					<li><a href="./about.html">About</a></li>
-					<li><a href="./gallery.html">Gallery</a></li>
-					<li><a href="./blog.html">Blog</a>
+					<!-- <li><a href="./blog.html">Blog</a>
 						<ul class="sub__menu">
 							<li><a href="./blog-single.html">Blog Single</a></li>
 						</ul>
-					</li>
-					<li><a href="./contact.html">Contact</a></li>
+					</li> -->
+					<!-- <li><a href="./contact.html">Contact</a></li> -->
 				</ul>
 			</nav>
 		</div>
 	</header>
 	<!-- Header Section end -->
 
-	<!-- Hero Section -->
-	<section class="hero__section">
-		<div class="hero-slider">
-			<div class="slide-item">
-				<a class="fresco" href="img/hero-slider/1.jpg" data-fresco-group="projects">
-					<img src="img/hero-slider/1.jpg" alt="">
-				</a>
-			</div>
-			<div class="slide-item">
-				<a class="fresco" href="img/hero-slider/2.jpg" data-fresco-group="projects">
-					<img src="img/hero-slider/2.jpg" alt="">
+	<!-- About Page -->
+
+	<!-- teks koji ce se nalaziti ispod menija -->
+	 <div class="container"><p style="color: rgb(22, 21, 21);">The idea for this website was born in the classroom at school. I decided to create a simple website that collects all the photos I took during school in one place. I did not focus on design but on simplicity.</p></div>
+	
+	<div class="gallery__page">
+		<div class="gallery__warp">
+			<div class="row">
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/1.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/1.jpg" alt="">
 					</a>
-			</div>
-			<div class="slide-item">
-				<a class="fresco" href="img/hero-slider/3.jpg" data-fresco-group="projects">
-					<img src="img/hero-slider/3.jpg" alt="">
-				</a>	
-			</div>
-			<div class="slide-item">
-				<a class="fresco" href="img/hero-slider/4.jpg" data-fresco-group="projects">
-					<img src="img/hero-slider/4.jpg" alt="">
-				</a>	
-			</div>
-			<div class="slide-item">
-				<a class="fresco" href="img/hero-slider/5.jpg" data-fresco-group="projects">
-					<img src="img/hero-slider/5.jpg" alt="">
-				</a>	
-			</div>
-			<div class="slide-item">
-				<a class="fresco" href="img/hero-slider/6.jpg" data-fresco-group="projects">
-					<img src="img/hero-slider/6.jpg" alt="">
-				</a>	
-			</div>
-			<div class="slide-item">
-				<a class="fresco" href="img/hero-slider/7.jpg" data-fresco-group="projects">
-					<img src="img/hero-slider/7.jpg" alt="">
-				</a>	
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/2.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/2.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/3.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/3.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/4.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/4.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/5.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/5.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/6.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/6.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/7.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/7.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/8.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/8.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/9.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/9.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/10.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/10.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/11.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/11.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/12.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/12.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/13.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/12.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/14.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/12.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/15.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/12.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/16.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/12.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/17.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/12.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/18.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/12.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/18.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/12.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/19.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/12.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/20.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/12.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/21.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/12.jpg" alt="">
+					</a>
+				</div><div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/22.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/12.jpg" alt="">
+					</a>
+				</div><div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/23.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/12.jpg" alt="">
+					</a>
+				</div><div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/24.jpg" data-fresco-group="gallery">
+						<img src="img/gallery/12.jpg" alt="">
+					</a>
+				</div>
 			</div>
 		</div>
-		<div class="hero-text-slider">
-			<div class="text-item">
-				<h2>Nature</h2>
-				<p>Photography</p>
-			</div>
-			<div class="text-item">
-				<h2>Red Heartbeat</h2>
-				<p>Photography</p>
-			</div>
-			<div class="text-item">
-				<h2>Blue Dreem</h2>
-				<p>Photography</p>
-			</div>
-			<div class="text-item">
-				<h2>Christian Church</h2>
-				<p>Photography</p>
-			</div>
-			<div class="text-item">
-				<h2>Red Darkness</h2>
-				<p>Photography</p>
-			</div>
-			<div class="text-item">
-				<h2>Beauty with Brain</h2>
-				<p>Photography</p>
-			</div>
-			<div class="text-item">
-				<h2>Remarkable</h2>
-				<p>Photography</p>
-			</div>
-		</div>
-	</section>
-	<!-- Hero Section end -->
+	</div>
+	<!-- About Page end -->
 
 	<!-- Footer Section -->
 	<footer class="footer__section">
 		<div class="container">
 			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 			<div class="footer__copyright__text">
-				<p>Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+				<p>Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved |  by <a href="https://sebwebswiss.ch/" target="_blank">Sebastien</a><i class="fa fa-heart" aria-hidden="true"></i></p>
 			</div>
 			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 		</div>
