--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 	<link rel="stylesheet" href="css/slicknav.min.css"/>
 	<link rel="stylesheet" href="css/fresco.css"/>
 	<link rel="stylesheet" href="css/slick.css"/>
+	<link rel="icon" href="favicon.png" type="image/x-icon">
+	<meta property="og:image" content="https://sebwebswiss.github.io/semi-basic_2/favicon.png">
+
 
 	<!-- Main Stylesheets -->
 	<link rel="stylesheet" href="css/style.css"/>
