--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Semi-basic_2 - Tacher Evelin</title>
+	<title>Semi-basic_2</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Boto Photo Studio HTML Template">
+	<meta name="description" content="Ohla school - Tacher Evelyn">
 	<meta name="keywords" content="photo, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Stylesheets -->
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="css/fresco.css"/>
 	<link rel="stylesheet" href="css/slick.css"/>
 	<link rel="icon" href="favicon.png" type="image/x-icon">
-	<meta property="og:image" content="https://sebwebswiss.github.io/semi-basic_2/favicon.png">
+	<meta property="og:image" content="https://sebwebswiss.github.io/semi-basic_2/wha.jpg">
 
 
 	<!-- Main Stylesheets -->
